k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    spec:
      containers:
        - name: homepage
          image: robbof/homepage
          imagePullPolicy: Always
          ports:
          - containerPort: 3000

      imagePullSecrets:
        - name: regcred
