k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: homepage
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: homepage
